ajout script script object

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,5 +66,5 @@
     "explorer.fileNesting.patterns": {
         "*.sln": "*.csproj"
     },
-    "dotnet.defaultSolution": "Leper-s-Quest-2.sln"
+    "dotnet.defaultSolution": "Leper-s-Quest.sln"
 }
